Bug 218279 - icons/text used for increase/decrease font size inconsistent with Konqueror
Summary: icons/text used for increase/decrease font size inconsistent with Konqueror
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-11 14:52 UTC by Jonathan Marten
Modified: 2010-02-15 11:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Marten 2009-12-11 14:52:05 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

The increase/decrease font size actions have now been forward ported to akregator trunk (commit 1059092).  However, the icons and text used for these actions are not consistent with Konqueror as a web browser:

   Akregator text/icon     Konqueror text/icon
   -------------------     -------------------
   Increase Font Sizes     Enlarge Font
   zoom-in                 format-font-size-more

   Decrease Font Sizes     Shrink Font
   zoom-out                format-font-size-less

The keyboard shortcuts (Ctrl++, Ctrl+-) are the same.

Suggest that Akregator should use the same action text and icons as Konqueror, for consistency, after the 4.4 string freeze is lifted.
Comment 1 Jonathan Marten 2009-12-12 14:55:35 UTC
Review request at http://reviewboard.kde.org/r/2357/
Comment 2 Jonathan Marten 2010-02-15 11:50:14 UTC
SVN commit 1090458 by marten:

Use the same icons and text for the increase/decrease font sizes actions
as used in Konqueror, for consistency.

Reviewed at http://reviewboard.kde.org/r/2357/

BUG:218279


 M  +5 -5      actionmanagerimpl.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1090458