Use the same icons and text for the increase/decrease font sizes actions as used in Konqueror, for consistency.

Reviewed at http://reviewboard.kde.org/r/2357/

BUG:218279

svn path=/trunk/KDE/kdepim/akregator/; revision=1090458